@@ -1,5 +1,10 @@
 DIST maven-artifact-2.1_pre20070614-gen-src.tar.bz2 7193 RMD160 4c72a6caf8a764ea739083546caca7b2acb67069 SHA1 3e13f6cc01c5fb8771be83ea3569e53e4f1cd3e4 SHA256 24b28c7a456bf38b743e34acd8c5db8fb62dd212548eeba5e0bd100e1b916d76
 DIST maven-artifact-2.1_pre20070614.tar.bz2 89663 RMD160 a06b5e8ff493d1fa0f697d4ec8965288d2ec78dc SHA1 5896f5be4142fa03b0fc985481c67e6f567a1568 SHA256 968a0a2d227fc835751ddd05f9a35dde95f0f7c7d20e0410fd4a6727c4b30a13
-EBUILD maven-artifact-2.1_pre20070614.ebuild 1064 RMD160 2f4edeb5c6d35da1203b3d778e2b189169c57c72 SHA1 fbc8ea5638c3d6646480d39588b6ef4663bf10dc SHA256 3959cc3c7e15b9ea68b59e6c4f762d06a3e0ff1c8e17ddfa42ce39cae03f54a9
+DIST maven-artifact-2.1_pre20071021-gen-src.tar.bz2 7314 RMD160 edbd0c20c64513b1aea108495782e6531cf7151e SHA1 55e21e88d6ac25d4e476a49bbc6a00cc374c756f SHA256 f7db80ba575bf463793c5f9f7d8c22d36c04470264697ad03ffbd1cca644cca0
+DIST maven-artifact-2.1_pre20071021.tar.bz2 95152 RMD160 34d92d0b54138aed4067d579e2c3247dc9e49921 SHA1 882f15da2c29a171440d9c759fc1b4a923ece48e SHA256 18e73b6ba62c1962060e232d1ebb871f6c9162f7a69be9d8f32edbcf39923034
+EBUILD maven-artifact-2.1_pre20070614.ebuild 1070 RMD160 00cdf7760b97d22f19b75b8644a14d52106b5a42 SHA1 86dc87059ca4361c75ab0a449c3b367ceb067754 SHA256 352999490944fd5e9b9fce1c643cb88f00eb94edf17f859fc11c9b04342d257c
+EBUILD maven-artifact-2.1_pre20071021.ebuild 1184 RMD160 3ee0d3a1138fe0e2ecc552a518bcef009b11aa65 SHA1 d2f49d25f8ac349abf136de1cca5be1a7c178c01 SHA256 b466e61ff4c1c8393f9467acff6fba0e61afc8cd723602788331103f00634e9e
 MISC ChangeLog 827 RMD160 b2e2572413fd75d8ca3ecd9462350fedf6e2a48e SHA1 8ee5ca2525658eb2677972597bc047d1eca0d389 SHA256 3036e4f0793f6ee8152d4dc2f6f25e51247bd96b3d037345162a86025b2918aa
+MISC maven-artifact-2.1_pre20071021-gen-src.tar.bz2 7314 RMD160 edbd0c20c64513b1aea108495782e6531cf7151e SHA1 55e21e88d6ac25d4e476a49bbc6a00cc374c756f SHA256 f7db80ba575bf463793c5f9f7d8c22d36c04470264697ad03ffbd1cca644cca0
+MISC maven-artifact-2.1_pre20071021.tar.bz2 95152 RMD160 34d92d0b54138aed4067d579e2c3247dc9e49921 SHA1 882f15da2c29a171440d9c759fc1b4a923ece48e SHA256 18e73b6ba62c1962060e232d1ebb871f6c9162f7a69be9d8f32edbcf39923034
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
