@@ -5,21 +5,23 @@
 JAVA_PKG_IUSE="source" #no javadoc target
 
 JAVA_MAVEN_ADD_GENERATED_STUFF="y"
+JAVA_MAVEN_GENERATED_STUFF_UNPACK_DIR="${S}"
 JAVA_MAVEN_BOOTSTRAP="Y"
 inherit java-maven-2
 
 DESCRIPTION="Maven is a software project management and comprehension tool."
 HOMEPAGE="http://maven.apache.org/"
 LICENSE="Apache-2.0"
-SLOT="2.1_pre"
+SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 DEP="
 =dev-java/classworlds-1*
 dev-java/plexus-classworlds
+dev-java/plexus-active-collections
 dev-java/plexus-component-api
 dev-java/plexus-container-default
-dev-java/plexus-utils
+=dev-java/plexus-utils-1.4.7*
 dev-java/wagon-provider-api
 dev-java/wagon-file
 dev-java/junit
@@ -30,9 +32,10 @@ RDEPEND=">=virtual/jre-1.4 ${DEP}"
 JAVA_MAVEN_CLASSPATH="
 classworlds-1
 plexus-classworlds
+plexus-active-collections
 plexus-component-api
 plexus-container-default
-plexus-utils
+plexus-utils-1.4.7
 wagon-provider-api
 wagon-file
 easymock-1
