@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Oct 2007; kiorky <kiorky@cryptelium.net>
+  maven-artifact-2.1_pre20070614.ebuild,
+  +maven-artifact-2.1_pre20071021.ebuild:
+  version bump
+
   11 Jun 2007; kiorky <kiorky@cryptelium.net>
   -maven-artifact-2.1_pre20070603.ebuild,
   +maven-artifact-2.1_pre20070611.ebuild:
